compiler/tests/should-fail/MpcSecretGuard.via
/* NoApplicableProtocolError */

host alice
host chuck

fun main() {
  /* Chuck hides the ball under a shell; alice guesses the shell. */
  val shell: int = endorse (input int from chuck) to {chuck & alice<-} from {chuck};
  val guess: int = endorse (input int from alice) to {alice & chuck<-} from {alice};

  var win_secret: bool{alice & chuck};
  var nice: bool{alice & chuck};

  /* Cannot compute conditional guard in MPC because of the loop in the else branch. */
  /* Chuck must prove that `shell` is valid without revealing its value. */
  if (1 <= shell && shell <= 3 && guess + shell <= 10) {
    win_secret = shell == guess;
  } else {
    win_secret = true;
    while (true) { nice = true; }
  }

  val win: bool{alice ⊓ chuck} = declassify win_secret to {alice ⊓ chuck};
  output win to alice;
  output win to chuck;
}
